# pnet-tool

./: .gitignore  LICENSE  README.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-linux.sh  turbo.json
.github/workflows/: ci.yml  release.yml
app/: layout.tsx  page.tsx
app/[locale]/: layout.tsx  page.tsx
app/session/: page.tsx
app/settings/: page.tsx
components/: locale-html-updater.tsx  locale-switcher.tsx  theme-toggle.tsx
components/desktop/: tauri-bridge-provider.tsx  window-chrome.tsx
components/home/: home-page.tsx  session-tabs.tsx
components/locale/: locale-provider.tsx
components/settings/: settings-page.tsx
components/terminal/: telnet-terminal.tsx  terminal-settings-provider.tsx
components/ui/: button.tsx  card.tsx  label.tsx
docs/: config.example  pnet-telnet  pnet-telnet.desktop  setup-win.ps1
docs/logs/: 0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.2.0.md  0.2.1.md
docs/setup/: appimage-build.md  manjaro-install.md  telnet-protocol-linux.md  windows-build.md
electron/: main.ts  preload.ts  tsconfig.json
lib/i18n/: config.ts  dictionaries.ts  get-dictionary.ts
locales/: en.ts  zh-CN.ts
scripts/: check-appimage-deps.sh  install-linux-portable.sh  install-linux.sh  install-telnet-handler.mjs  install-windows-portable.ps1  launch-telnet.sh  postinstall.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: shell.json
src-tauri/permissions/: shell.json
src-tauri/src/: main.rs
types/: desktop-bridge.d.ts
(+7 files in other folders)
