[package]
name = "pnet-tool"
version = "0.2.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2.0.0", features = ["tray-icon", "devtools"] }
tauri-plugin-process = { version = "2.0.0" }
tauri-plugin-shell = { version = "2.0.0" }
tauri-plugin-single-instance = { version = "2.0.0" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
